# saucers

./: Cargo.toml  README.md  uploader.tst
.github/workflows/: rust.yml
saucelabs_api/: Cargo.toml  README.md
saucelabs_api/docs/: Build.md  BuildApi.md  BuildJobs.md  CiStat.md  CommandCountStats.md  Concurrency.md  DefaultApi.md  File.md  InlineObject1.md  InlineResponse2002.md  InlineResponse2002Response.md  InlineResponse2003.md  InlineResponse2003Metadata.md  InlineResponse2004.md  InlineResponse2006.md  Job.md  OrgTeamConcurrencyValues.md  Platform.md  PlatformApi.md  SauceStatus.md  Tunnel.md  TunnelApi.md  TunnelMetaData.md  WhoamiUser.md
saucelabs_api/src/apis/: activity_api.rs  asset_api.rs  build_api.rs  configuration.rs  platform_api.rs  tunnel_api.rs  user_api.rs
saucelabs_api/src/models/: ci_stat.rs  command_count_stats.rs  concurrency.rs  concurrency_limit.rs  concurrency_values.rs  error.rs  file.rs  inline_object_1.rs  inline_response_200_1.rs  inline_response_200_2.rs  inline_response_200_2_response.rs  inline_response_200_3.rs  inline_response_200_3_metadata.rs  inline_response_200_4.rs  inline_response_200_7.rs  platform.rs  sauce_status.rs  tunnel.rs  tunnel_meta_data.rs  user.rs  whoami_user.rs
src/: api_client.rs  main.rs
src/codegen_saucelabs/: README.md
src/codegen_saucelabs/.openapi-generator/: FILES
src/codegen_saucelabs/docs/: Activity.md  ActivityApi.md  AssetApi.md  BaseConfig.md  ConcurrencyLimit.md  ConcurrencyValues.md  Error.md  InfoApi.md  InlineObject.md  InlineResponse200.md  InlineResponse2001.md  InlineResponse2005.md  (+5 more)
(+17 files in other folders)
