[package]
name = "saucers"
version = "0.1.0"
authors = ["robert arles <robert.r.arles@disney.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33" }
serde = ""
serde_json = ""
futures = { version = "0.3", features = ["compat"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["full"] }